Not remove a pinned notification by user action

The pinned notification should be unremovable by user action, but it was removable by delete key. This patch fixes the issue by making pinned notifications unremovable by user action.

BUG=647149
TEST=manual test

Review-Url: https://codereview.chromium.org/2371693002
Cr-Commit-Position: refs/heads/master@{#422092}

Former-commit-id: d78edc6840a9a42afc7b50e6e714b9fc21f0c6d8